static/css/base.css
* {
    padding: 0;
    margin: 0;
}
html {
    height: 100%;
}

.hero-section{
    background: url('/media/170813-fraser-genderless-clothing-hero_w16zkj.jpg') no-repeat center top;
    background-size: cover;
    height: calc(100vh - 164px);
    color: #555;
    font-family: 'Lato';
}

.search-box{
    top: 50%;
    left: 50%;
    position: absolute;
    transform: translate(-50%, -50%)

}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
}

.shop-now-button {
    background: white;
    color: black;
    min-width: 260px;
}

.btn-black {
    background: white;
    color: black;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #222;
    color: white;
}

.text-black {
    color: #000 !important;
}

.border-black {
    border: 1px solid black !important;
}

/* explore-new-trend-section-css/ index.html from line 31 */
/* this code is from https://www.goingtointernet.com/2020/08/responsive-e-commerce-product-slider.html */

a{
	text-decoration:none;
}
.box{
	width:320px; /*Late need to give media query here to make display better*/
	box-shadow: 2px 2px 30px rgba(0,0,0,0.2);
	border-radius: 10px;
	overflow: hidden;
	margin: 25px;

}
.slide-img{
	height: 450px;
	position:relative;
}
.slide-img img{
	width:100%;
	height: 100%;
	object-fit: cover;
	box-sizing: border-box;
}
.detail-box{
	width: 100%;
    display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 10px 20px;
	box-sizing: border-box;
	font-family: calibri;
}
.type{
	display: flex;
	flex-direction: column;
}
.type a{
	color:#222222;
	margin: 5px 0px;
	font-weight: 700;
	letter-spacing: 0.5px;
	padding-right: 8px;
}
.type span{
	color:rgba(26,26,26,0.5);
}
.price{
	color: #333333;
	font-weight: 600;
	font-size: 1.1rem;
	font-family: poppins;
	letter-spacing: 0.5px;
}
.overlay{
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%,-50%);
	width:100%;
	height: 100%;
	background-color: rgba(92,95,236,0.6);
	display: flex;
	justify-content: center;
	align-items: center;
}
.buy-btn{
	width:160px;
	height: 40px;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: #FFFFFF;
	color:#252525;
	font-weight: 700;
	letter-spacing: 1px;
	font-family: calibri;
	border-radius: 20px;
	box-shadow: 2px 2px 30px rgba(0,0,0,0.2);
}
.buy-btn:hover{
	color:#FFFFFF;
	background-color: #f15fa3;
	transition: all ease 0.3s;
}
.overlay{
	visibility: hidden;
}
.slide-img:hover .overlay{
	visibility: visible;
	animation:fade 0.5s;
}
/* discount jumbotron */

.discount-background{
    background-image: url('/media/discount-image.jpg');
    height: 75vh;
    /*width: 100%;*/
    background-repeat: no-repeat, repeat;
    background-position: center;
    background-size: cover;
    padding-top: 50px;
    padding-bottom: 100px;
    border-radius: 0px;
    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
}


/* happening events section */


#happening-events{
    background-image: url('/media/happening-events.jpg');
  
    width: 100%;
    background-repeat: no-repeat, repeat;
    background-position: center;
    background-size: cover;
    padding-top: 50px;
    padding-bottom: 100px;
    border-radius: 0px;
    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);

    
    
    height: 50vh;
    display: flex!important;
    align-items: center !important;
    justify-content: center!important;
}
.happening-events-custom-container{
    
    max-width:  700px;
    width: 100%;
  
    height: 50vh;
    display: flex!important;
    align-items: center !important;
    justify-content: center!important;

}

.custom{
    float: right !important;
}

@keyframes fade{
	0%{
		opacity: 0;
	}
	100%{
		opacity: 1;
	}
}
.slider{
	width:100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}

/* Image Gallery  */
.product-small-img img
{
    height: 92px;
    margin: 10px 0;
    cursor: pointer;
    display: block;
    opacity: 0.6;
}
.product-small-img img:hover
{
    opacity: 1;
}
.product-small-img
{
    float: left;
}

.product {

}

.img-container img {
 
}
.img-container{
  
    
}
#full-image{
    
    height: 500px;

}




/*--responsive for mobile phone--*/
@media(max-width:720px){
	.box{
		width: 50%;
		height: 500px;
	}
	.model{
		height:250px;
	}
	.details p{
		font-size: 16px;
		width: 250px;
	}
	
}


/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 164px;
    }
}

